fix dropdown z-index

--- a/assets/css/src/scss/partials/_dropdown.scss
+++ b/assets/css/src/scss/partials/_dropdown.scss
@@ -48,6 +48,8 @@ dropdown {
       max-width: 100%;
       max-height: 100%;
 
+      z-index: $zindex-dropdown;
+
       .#{namespace('dropdown')}-content {
         @include border-radius($dropdown-border-radius);
         @include box-shadow(0 6px 12px rgba(0,0,0,.175));
